--- a/01-ingestion/scripts/us_employment.ipynb
+++ b/01-ingestion/scripts/us_employment.ipynb
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4eefcdcd",
+   "id": "38d82a42",
    "metadata": {},
    "outputs": [
     {
@@ -312,8 +312,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.state_fips = pd.to_numeric(df.state_fips)\n",
-    "df.county_fips = pd.to_numeric(df.county_fips)\n",
     "df.year = pd.to_numeric(df.year)\n",
     "df.unemployment_rate = pd.to_numeric(df.unemployment_rate)"
    ]
@@ -330,8 +328,8 @@
      "text": [
       "CREATE TABLE \"us_employment_data\" (\n",
       "\"LAUS_code\" TEXT,\n",
-      "  \"state_fips\" INTEGER,\n",
-      "  \"county_fips\" INTEGER,\n",
+      "  \"state_fips\" TEXT,\n",
+      "  \"county_fips\" TEXT,\n",
       "  \"county_state\" TEXT,\n",
       "  \"year\" INTEGER,\n",
       "  \"labor_force\" INTEGER,\n",
@@ -348,27 +346,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "054e2ae8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f\"./data/us_employment_{df.year[6]}.csv\", index=None, header=True)"
+    "df.to_csv(f\"/Users/alvin/Documents/projects/project_de-zoomcamp/01-ingestion/data/us_employment_{df.year[6]}.csv\", index=None, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "292cec23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv = pd.DataFrame(pd.read_csv(\"./data/us_employment_2021.csv\"))"
+    "df_csv = pd.DataFrame(pd.read_csv(f\"/Users/alvin/Documents/projects/project_de-zoomcamp/01-ingestion/data/us_employment_{df.year[6]}.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "772e4f44",
    "metadata": {},
    "outputs": [
@@ -572,7 +570,7 @@
        "[3220 rows x 9 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
