Add terraform configurations

--- a/01-ingestion/scripts/us_employment.ipynb
+++ b/01-ingestion/scripts/us_employment.ipynb
@@ -65,6 +65,16 @@
    "execution_count": 7,
    "id": "38d82a42",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['fips'] = df['state_fips'] + df['county_fips']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd411be8",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -96,6 +106,7 @@
        "      <th>employed</th>\n",
        "      <th>unemployed</th>\n",
        "      <th>unemployment_rate</th>\n",
+       "      <th>fips</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -110,6 +121,7 @@
        "      <td>25599</td>\n",
        "      <td>742</td>\n",
        "      <td>2.8</td>\n",
+       "      <td>01001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -122,6 +134,7 @@
        "      <td>96481</td>\n",
        "      <td>2946</td>\n",
        "      <td>3</td>\n",
+       "      <td>01003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -134,6 +147,7 @@
        "      <td>7728</td>\n",
        "      <td>469</td>\n",
        "      <td>5.7</td>\n",
+       "      <td>01005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -146,6 +160,7 @@
        "      <td>8262</td>\n",
        "      <td>298</td>\n",
        "      <td>3.5</td>\n",
+       "      <td>01007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -158,9 +173,11 @@
        "      <td>24529</td>\n",
        "      <td>598</td>\n",
        "      <td>2.4</td>\n",
+       "      <td>01009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -182,6 +199,7 @@
        "      <td>12742</td>\n",
        "      <td>1443</td>\n",
        "      <td>10.2</td>\n",
+       "      <td>72145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3221</th>\n",
@@ -194,6 +212,7 @@
        "      <td>2435</td>\n",
        "      <td>340</td>\n",
        "      <td>12.3</td>\n",
+       "      <td>72147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3222</th>\n",
@@ -206,6 +225,7 @@
        "      <td>6807</td>\n",
        "      <td>893</td>\n",
        "      <td>11.6</td>\n",
+       "      <td>72149</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3223</th>\n",
@@ -218,6 +238,7 @@
        "      <td>8217</td>\n",
        "      <td>947</td>\n",
        "      <td>10.3</td>\n",
+       "      <td>72151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3224</th>\n",
@@ -230,10 +251,11 @@
        "      <td>9014</td>\n",
        "      <td>1199</td>\n",
        "      <td>11.7</td>\n",
+       "      <td>72153</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3220 rows × 9 columns</p>\n",
+       "<p>3220 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -250,23 +272,23 @@
        "3223  CN7215100000000         72         151    Yabucoa Municipio, PR  2021   \n",
        "3224  CN7215300000000         72         153      Yauco Municipio, PR  2021   \n",
        "\n",
-       "     labor_force employed unemployed unemployment_rate  \n",
-       "5          26341    25599        742               2.8  \n",
-       "6          99427    96481       2946                 3  \n",
-       "7           8197     7728        469               5.7  \n",
-       "8           8560     8262        298               3.5  \n",
-       "9          25127    24529        598               2.4  \n",
-       "...          ...      ...        ...               ...  \n",
-       "3220       14185    12742       1443              10.2  \n",
-       "3221        2775     2435        340              12.3  \n",
-       "3222        7700     6807        893              11.6  \n",
-       "3223        9164     8217        947              10.3  \n",
-       "3224       10213     9014       1199              11.7  \n",
+       "     labor_force employed unemployed unemployment_rate   fips  \n",
+       "5          26341    25599        742               2.8  01001  \n",
+       "6          99427    96481       2946                 3  01003  \n",
+       "7           8197     7728        469               5.7  01005  \n",
+       "8           8560     8262        298               3.5  01007  \n",
+       "9          25127    24529        598               2.4  01009  \n",
+       "...          ...      ...        ...               ...    ...  \n",
+       "3220       14185    12742       1443              10.2  72145  \n",
+       "3221        2775     2435        340              12.3  72147  \n",
+       "3222        7700     6807        893              11.6  72149  \n",
+       "3223        9164     8217        947              10.3  72151  \n",
+       "3224       10213     9014       1199              11.7  72153  \n",
        "\n",
-       "[3220 rows x 9 columns]"
+       "[3220 rows x 10 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ddd82752",
    "metadata": {
     "scrolled": true
@@ -296,7 +318,8 @@
       "  \"labor_force\" INTEGER,\n",
       "  \"employed\" INTEGER,\n",
       "  \"unemployed\" INTEGER,\n",
-      "  \"unemployment_rate\" TEXT\n",
+      "  \"unemployment_rate\" TEXT,\n",
+      "  \"fips\" TEXT\n",
       ")\n"
      ]
     }
@@ -307,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d0b21b1a",
    "metadata": {},
    "outputs": [],
@@ -318,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f59ab4bd",
    "metadata": {},
    "outputs": [
@@ -335,7 +358,8 @@
       "  \"labor_force\" INTEGER,\n",
       "  \"employed\" INTEGER,\n",
       "  \"unemployed\" INTEGER,\n",
-      "  \"unemployment_rate\" REAL\n",
+      "  \"unemployment_rate\" REAL,\n",
+      "  \"fips\" TEXT\n",
       ")\n"
      ]
     }
@@ -346,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "054e2ae8",
    "metadata": {},
    "outputs": [],
@@ -356,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "292cec23",
    "metadata": {},
    "outputs": [],
@@ -366,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "772e4f44",
    "metadata": {},
    "outputs": [
@@ -400,6 +424,7 @@
        "      <th>employed</th>\n",
        "      <th>unemployed</th>\n",
        "      <th>unemployment_rate</th>\n",
+       "      <th>fips</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -414,6 +439,7 @@
        "      <td>25599</td>\n",
        "      <td>742</td>\n",
        "      <td>2.8</td>\n",
+       "      <td>1001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -426,6 +452,7 @@
        "      <td>96481</td>\n",
        "      <td>2946</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>1003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -438,6 +465,7 @@
        "      <td>7728</td>\n",
        "      <td>469</td>\n",
        "      <td>5.7</td>\n",
+       "      <td>1005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -450,6 +478,7 @@
        "      <td>8262</td>\n",
        "      <td>298</td>\n",
        "      <td>3.5</td>\n",
+       "      <td>1007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -462,9 +491,11 @@
        "      <td>24529</td>\n",
        "      <td>598</td>\n",
        "      <td>2.4</td>\n",
+       "      <td>1009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -486,6 +517,7 @@
        "      <td>12742</td>\n",
        "      <td>1443</td>\n",
        "      <td>10.2</td>\n",
+       "      <td>72145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3216</th>\n",
@@ -498,6 +530,7 @@
        "      <td>2435</td>\n",
        "      <td>340</td>\n",
        "      <td>12.3</td>\n",
+       "      <td>72147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3217</th>\n",
@@ -510,6 +543,7 @@
        "      <td>6807</td>\n",
        "      <td>893</td>\n",
        "      <td>11.6</td>\n",
+       "      <td>72149</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3218</th>\n",
@@ -522,6 +556,7 @@
        "      <td>8217</td>\n",
        "      <td>947</td>\n",
        "      <td>10.3</td>\n",
+       "      <td>72151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3219</th>\n",
@@ -534,10 +569,11 @@
        "      <td>9014</td>\n",
        "      <td>1199</td>\n",
        "      <td>11.7</td>\n",
+       "      <td>72153</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3220 rows × 9 columns</p>\n",
+       "<p>3220 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -554,23 +590,23 @@
        "3218  CN7215100000000          72          151    Yabucoa Municipio, PR  2021   \n",
        "3219  CN7215300000000          72          153      Yauco Municipio, PR  2021   \n",
        "\n",
-       "      labor_force  employed  unemployed  unemployment_rate  \n",
-       "0           26341     25599         742                2.8  \n",
-       "1           99427     96481        2946                3.0  \n",
-       "2            8197      7728         469                5.7  \n",
-       "3            8560      8262         298                3.5  \n",
-       "4           25127     24529         598                2.4  \n",
-       "...           ...       ...         ...                ...  \n",
-       "3215        14185     12742        1443               10.2  \n",
-       "3216         2775      2435         340               12.3  \n",
-       "3217         7700      6807         893               11.6  \n",
-       "3218         9164      8217         947               10.3  \n",
-       "3219        10213      9014        1199               11.7  \n",
+       "      labor_force  employed  unemployed  unemployment_rate   fips  \n",
+       "0           26341     25599         742                2.8   1001  \n",
+       "1           99427     96481        2946                3.0   1003  \n",
+       "2            8197      7728         469                5.7   1005  \n",
+       "3            8560      8262         298                3.5   1007  \n",
+       "4           25127     24529         598                2.4   1009  \n",
+       "...           ...       ...         ...                ...    ...  \n",
+       "3215        14185     12742        1443               10.2  72145  \n",
+       "3216         2775      2435         340               12.3  72147  \n",
+       "3217         7700      6807         893               11.6  72149  \n",
+       "3218         9164      8217         947               10.3  72151  \n",
+       "3219        10213      9014        1199               11.7  72153  \n",
        "\n",
-       "[3220 rows x 9 columns]"
+       "[3220 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
